Fix Fares description contrast

--- a/styles.scss
+++ b/styles.scss
@@ -698,7 +698,7 @@ footer {
         border-radius: 2px;
     }
     .fareDescription{
-        color: $grey;
+        color: rgba($color: $white, $alpha: 0.47);
         margin-top: 6px;
         position: absolute;
         top: 50%;
@@ -718,7 +718,7 @@ footer {
         background-color: $black;
         margin-bottom: 20px;
         border: 1px solid $grey;
-        color: $white50;
+        color: rgba($color: $white, $alpha: 0.6);
         padding: 10px;
     }
     #ValidateChoice{
